feat: get budget category
