# docs/openapi.json
@@ -178,6 +178,23 @@
                 },
                 "type": "object"
             },
+            "dto.GetBudgetCategoryResponse": {
+                "properties": {
+                    "available": {
+                        "type": "integer"
+                    },
+                    "spent": {
+                        "type": "integer"
+                    },
+                    "transactions": {
+                        "items": {
+                            "$ref": "#/components/schemas/entity.TransactionWithCategoryAndInstitution"
+                        },
+                        "type": "array"
+                    }
+                },
+                "type": "object"
+            },
             "dto.GetBudgetResponse": {
                 "properties": {
                     "amount": {
@@ -197,7 +214,7 @@
                     },
                     "budget_categories": {
                         "items": {
-                            "$ref": "#/components/schemas/usecase.GetBudgetCategoryOutput"
+                            "$ref": "#/components/schemas/usecase.GetBudgetBudgetCategories"
                         },
                         "type": "array"
                     },
@@ -707,6 +724,65 @@
                 },
                 "type": "object"
             },
+            "entity.TransactionWithCategoryAndInstitution": {
+                "properties": {
+                    "account_id": {
+                        "type": "string"
+                    },
+                    "amount": {
+                        "type": "integer"
+                    },
+                    "category_id": {
+                        "type": "string"
+                    },
+                    "category_name": {
+                        "type": "string"
+                    },
+                    "created_at": {
+                        "type": "string"
+                    },
+                    "date": {
+                        "type": "string"
+                    },
+                    "deleted_at": {
+                        "type": "string"
+                    },
+                    "external_id": {
+                        "type": "string"
+                    },
+                    "id": {
+                        "type": "string"
+                    },
+                    "institution_id": {
+                        "type": "string"
+                    },
+                    "institution_logo": {
+                        "type": "string"
+                    },
+                    "institution_name": {
+                        "type": "string"
+                    },
+                    "is_ignored": {
+                        "type": "boolean"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "payment_method_id": {
+                        "type": "string"
+                    },
+                    "payment_method_name": {
+                        "type": "string"
+                    },
+                    "updated_at": {
+                        "type": "string"
+                    },
+                    "user_id": {
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
             "entity.User": {
                 "properties": {
                     "avatar": {
@@ -779,7 +855,7 @@
                 },
                 "type": "object"
             },
-            "usecase.GetBudgetCategoryOutput": {
+            "usecase.GetBudgetBudgetCategories": {
                 "properties": {
                     "amount": {
                         "type": "integer"
@@ -1237,6 +1313,7 @@
                         "description": "Date",
                         "in": "query",
                         "name": "date",
+                        "required": true,
                         "schema": {
                             "format": "date",
                             "type": "string"
@@ -1350,6 +1427,84 @@
                     }
                 ],
                 "summary": "Create or update budget",
+                "tags": [
+                    "Budget"
+                ]
+            }
+        },
+        "/v1/budgets/categories/{category_id}": {
+            "get": {
+                "description": "Get budget category",
+                "parameters": [
+                    {
+                        "description": "Date",
+                        "in": "query",
+                        "name": "date",
+                        "required": true,
+                        "schema": {
+                            "format": "date",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Category ID",
+                        "in": "path",
+                        "name": "category_id",
+                        "required": true,
+                        "schema": {
+                            "format": "uuid",
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/dto.GetBudgetCategoryResponse"
+                                }
+                            }
+                        },
+                        "description": "OK"
+                    },
+                    "400": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/dto.ErrorResponse"
+                                }
+                            }
+                        },
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/dto.ErrorResponse"
+                                }
+                            }
+                        },
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/dto.ErrorResponse"
+                                }
+                            }
+                        },
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "summary": "Get budget category",
                 "tags": [
                     "Budget"
                 ]
