# internal/app/restapi/router/router.go
@@ -105,6 +105,7 @@ func (r *Router) Register(
 
 	usersApiV1.POST("/budgets", r.bh.Upsert)
 	usersApiV1.GET("/budgets", r.bh.Get)
+	usersApiV1.GET("/budgets/categories/:category_id", r.bh.GetCategory)
 	usersApiV1.DELETE("/budgets", r.bh.Delete)
 
 	usersApiV1.GET("/transactions", r.th.List)
